--- a/AdvancedSample/AdvancedSample/Base.lproj/Main.storyboard
+++ b/AdvancedSample/AdvancedSample/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -59,8 +59,18 @@
                                     <action selector="incrementEventButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GgO-nB-YTt"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bnf-0m-E5x" userLabel="ResetState">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lPH-Fn-T9q">
                                 <rect key="frame" x="20" y="420.5" width="374" height="30"/>
+                                <color key="backgroundColor" red="0.92156862750000001" green="0.16862745100000001" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Custom Invite"/>
+                                <connections>
+                                    <action selector="incrementEventButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IDI-ED-j4l"/>
+                                    <segue destination="suZ-aE-86m" kind="presentation" id="PcN-Na-JKA"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bnf-0m-E5x" userLabel="ResetState">
+                                <rect key="frame" x="20" y="470.5" width="374" height="30"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Reset State"/>
@@ -71,12 +81,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="kcP-A7-Aqb" firstAttribute="trailing" secondItem="efW-f0-k4I" secondAttribute="trailing" constant="20" id="4Am-3I-C46"/>
                             <constraint firstItem="upD-A7-0hn" firstAttribute="top" secondItem="kcP-A7-Aqb" secondAttribute="top" constant="50" id="4Tr-0W-A7C"/>
-                            <constraint firstItem="Bnf-0m-E5x" firstAttribute="top" secondItem="Wu9-ac-gaW" secondAttribute="bottom" constant="20" id="7eO-3r-chx"/>
                             <constraint firstItem="Wu9-ac-gaW" firstAttribute="top" secondItem="wZA-DH-GmN" secondAttribute="bottom" constant="20" id="7l9-ZT-RhJ"/>
                             <constraint firstItem="Bnf-0m-E5x" firstAttribute="leading" secondItem="kcP-A7-Aqb" secondAttribute="leading" constant="20" id="8Vr-tz-5r7"/>
+                            <constraint firstItem="kcP-A7-Aqb" firstAttribute="trailing" secondItem="lPH-Fn-T9q" secondAttribute="trailing" constant="20" id="D3K-14-F1C"/>
                             <constraint firstItem="wZA-DH-GmN" firstAttribute="top" secondItem="xQE-Z6-62t" secondAttribute="bottom" constant="20" id="FgK-BL-ODE"/>
                             <constraint firstItem="upD-A7-0hn" firstAttribute="centerX" secondItem="kcP-A7-Aqb" secondAttribute="centerX" id="I0I-ie-zi2"/>
+                            <constraint firstItem="efW-f0-k4I" firstAttribute="leading" secondItem="kcP-A7-Aqb" secondAttribute="leading" constant="20" id="JKy-yu-SSu"/>
                             <constraint firstItem="kcP-A7-Aqb" firstAttribute="trailing" secondItem="xQE-Z6-62t" secondAttribute="trailing" constant="20" id="LaK-T0-RVc"/>
                             <constraint firstItem="efW-f0-k4I" firstAttribute="top" secondItem="upD-A7-0hn" secondAttribute="bottom" constant="20" id="Mpa-Ni-c17"/>
                             <constraint firstItem="kcP-A7-Aqb" firstAttribute="trailing" secondItem="efW-f0-k4I" secondAttribute="trailing" constant="20" id="NYb-5l-dEh"/>
@@ -85,9 +97,12 @@
                             <constraint firstItem="kcP-A7-Aqb" firstAttribute="trailing" secondItem="wZA-DH-GmN" secondAttribute="trailing" constant="20" id="RlV-SY-cct"/>
                             <constraint firstItem="wZA-DH-GmN" firstAttribute="leading" secondItem="kcP-A7-Aqb" secondAttribute="leading" constant="20" id="SpM-ub-xpA"/>
                             <constraint firstItem="Wu9-ac-gaW" firstAttribute="leading" secondItem="kcP-A7-Aqb" secondAttribute="leading" constant="20" id="hLM-6O-3xH"/>
+                            <constraint firstItem="lPH-Fn-T9q" firstAttribute="leading" secondItem="kcP-A7-Aqb" secondAttribute="leading" constant="20" id="jsR-aP-GWG"/>
                             <constraint firstItem="xQE-Z6-62t" firstAttribute="top" secondItem="efW-f0-k4I" secondAttribute="bottom" constant="20" id="tiO-1P-yhA"/>
                             <constraint firstItem="kcP-A7-Aqb" firstAttribute="trailing" secondItem="Wu9-ac-gaW" secondAttribute="trailing" constant="20" id="tsk-Sr-PmW"/>
+                            <constraint firstItem="Bnf-0m-E5x" firstAttribute="top" secondItem="lPH-Fn-T9q" secondAttribute="bottom" constant="20" id="wUj-h5-FC4"/>
                             <constraint firstItem="kcP-A7-Aqb" firstAttribute="trailing" secondItem="Bnf-0m-E5x" secondAttribute="trailing" constant="20" id="xLQ-hy-Ubu"/>
+                            <constraint firstItem="lPH-Fn-T9q" firstAttribute="top" secondItem="Wu9-ac-gaW" secondAttribute="bottom" constant="20" id="xig-FE-kfu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kcP-A7-Aqb"/>
                     </view>
@@ -97,7 +112,80 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="88"/>
+            <point key="canvasLocation" x="-638" y="-587"/>
+        </scene>
+        <!--Products View Controller-->
+        <scene sceneID="z5A-XQ-te3">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="suZ-aE-86m" customClass="ProductsViewController" customModule="AdvancedSample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CdM-mx-01q">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="foresee_logo" translatesAutoresizingMaskIntoConstraints="NO" id="PY3-gZ-yLL">
+                                <rect key="frame" x="172" y="94" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="jRz-vB-m3W"/>
+                                    <constraint firstAttribute="width" constant="70" id="zhl-rB-yTx"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NPb-vo-lqf">
+                                <rect key="frame" x="20" y="184" width="374" height="83"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="250" constant="200" id="Uyh-26-NWR"/>
+                                </constraints>
+                                <string key="text">This example demonstrates how you can implement an in-line custom invite in your app, and also use the default invite listener interface to be informed of any events involving the invitation and survey process.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ipQ-Tr-Abs">
+                                <rect key="frame" x="20" y="287" width="374" height="555"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="prm-z4-yO5">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IPF-V1-6lS">
+                                <rect key="frame" x="20" y="54" width="44" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Close">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="closeAction:" destination="suZ-aE-86m" eventType="touchUpInside" id="O1I-j4-b61"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ipQ-Tr-Abs" firstAttribute="top" secondItem="NPb-vo-lqf" secondAttribute="bottom" constant="20" id="2JH-fG-SZq"/>
+                            <constraint firstItem="CS1-gV-Qi8" firstAttribute="bottom" secondItem="ipQ-Tr-Abs" secondAttribute="bottom" constant="20" id="7Xx-YU-5PU"/>
+                            <constraint firstItem="PY3-gZ-yLL" firstAttribute="top" secondItem="CS1-gV-Qi8" secondAttribute="top" constant="50" id="CsV-Ug-U5a"/>
+                            <constraint firstItem="PY3-gZ-yLL" firstAttribute="centerX" secondItem="CdM-mx-01q" secondAttribute="centerX" id="VDa-bs-BY7"/>
+                            <constraint firstItem="IPF-V1-6lS" firstAttribute="top" secondItem="CS1-gV-Qi8" secondAttribute="top" constant="10" id="Yeu-A7-5dI"/>
+                            <constraint firstAttribute="trailing" secondItem="NPb-vo-lqf" secondAttribute="trailing" constant="20" id="aOM-WQ-RJx"/>
+                            <constraint firstItem="IPF-V1-6lS" firstAttribute="leading" secondItem="CS1-gV-Qi8" secondAttribute="leading" constant="20" id="bNs-jz-eqa"/>
+                            <constraint firstItem="ipQ-Tr-Abs" firstAttribute="centerX" secondItem="CdM-mx-01q" secondAttribute="centerX" id="jOH-m6-hEq"/>
+                            <constraint firstItem="NPb-vo-lqf" firstAttribute="leading" secondItem="CdM-mx-01q" secondAttribute="leading" constant="20" id="k7p-gh-oF4"/>
+                            <constraint firstItem="ipQ-Tr-Abs" firstAttribute="leading" secondItem="CS1-gV-Qi8" secondAttribute="leading" constant="20" id="nho-lT-fDB"/>
+                            <constraint firstItem="NPb-vo-lqf" firstAttribute="centerX" secondItem="CdM-mx-01q" secondAttribute="centerX" id="vFo-Om-BAI"/>
+                            <constraint firstItem="NPb-vo-lqf" firstAttribute="top" secondItem="PY3-gZ-yLL" secondAttribute="bottom" constant="20" id="xqJ-wS-adf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CS1-gV-Qi8"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="BSf-u7-vhy"/>
+                    <connections>
+                        <outlet property="gridView" destination="ipQ-Tr-Abs" id="9nj-EG-MKR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EU1-ba-cHn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="138" y="-586"/>
         </scene>
     </scenes>
     <resources>
