--- a/DBASample/DBASample/Base.lproj/Main.storyboard
+++ b/DBASample/DBASample/Base.lproj/Main.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="verint_logo" translatesAutoresizingMaskIntoConstraints="NO" id="5ff-J9-jt5">
-                                <rect key="frame" x="100" y="109" width="193" height="70"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="verint_logo" translatesAutoresizingMaskIntoConstraints="NO" id="5ff-J9-jt5">
+                                <rect key="frame" x="113.33333333333333" y="109" width="166.66666666666669" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="aZw-fe-cbS"/>
                                 </constraints>
@@ -123,8 +123,8 @@ In this app, debug masking is enabled so that you can verify the position of the
                                     <action selector="textFieldMaskSwitchChanged:" destination="9BS-S8-bgI" eventType="valueChanged" id="ZDs-fW-C1O"/>
                                 </connections>
                             </switch>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="verint_logo" translatesAutoresizingMaskIntoConstraints="NO" id="35O-8M-ccp">
-                                <rect key="frame" x="100" y="400.66666666666669" width="193" height="70"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="verint_logo" translatesAutoresizingMaskIntoConstraints="NO" id="35O-8M-ccp">
+                                <rect key="frame" x="113.33333333333333" y="400.66666666666669" width="166.66666666666669" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="Mf5-cA-HNf"/>
                                 </constraints>
@@ -180,7 +180,7 @@ In this app, debug masking is enabled so that you can verify the position of the
         </scene>
     </scenes>
     <resources>
-        <image name="verint_logo" width="193" height="68"/>
+        <image name="verint_logo" width="166.66667175292969" height="74.666664123535156"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
